Fixed #460 (User email does not fit into input).

--- a/site/engine_public/css/admin.css
+++ b/site/engine_public/css/admin.css
@@ -118,6 +118,10 @@ input[type="file"] {
     padding: 0px;
 }
 
+input.admin-medium {
+    width: 300px;
+}
+
 input.admin-long {
     width: 700px;
 }
